im going to shoot myself

--- a/templates/committee.html.twig
+++ b/templates/committee.html.twig
@@ -32,33 +32,17 @@
         <div class="col-md-5 bio">
             <img class="rounded-circle" src="img/committee/samj.jpg" alt="Treasurer">
             <h2>Sam Jackson</h2>
-            <h3>Co-Treasurer</h3>
+            <h3>Treasurer</h3>
             <p class="lead"><a href="mailto:treasurer@mutts.org.uk">treasurer@mutts.org.uk</a></p>
             <p>Sam is a second year Politics and Economics student, and it is his second year in MUTTS. As treasurer he'll be responsible for the society’s finances.</p>
         </div>
-        <div class="col-md-5 bio">
-            <img class="rounded-circle" src="img/committee/rachel.jpg" alt="Treasurer">
-            <h2>Rachel Samuels</h2>
-            <h3>Co-Treasurer</h3>
-            <p class="lead"><a href="mailto:treasurer@mutts.org.uk">treasurer@mutts.org.uk</a></p>
-            <p>This is Rachel's second year in MUTTS. As treasurer she'll be responsible for the society’s finances.</p>
-        </div>
-    </div>
-    <div class="row mb-5">
         <div class="col-md-1"></div>
         <div class="col-md-5 bio">
             <img class="rounded-circle" src="img/committee/james.jpg" alt="Secretary">
             <h2>James Button</h2>
-            <h3>Co-Secretary</h3>
+            <h3>Secretary</h3>
             <p class="lead"><a href="mailto:secretary@mutts.org.uk">secretary@mutts.org.uk</a></p>
             <p>James is a third year Pharmacy student and it is his second year in MUTTS. As Secretary, he is responsible for maintaining the crew and show operator rota for hires as well as general organisation.</p>
-        </div>
-        <div class="col-md-5 bio">
-            <img class="rounded-circle" src="img/committee/nisan.jpg" alt="Treasurer">
-            <h2>Nisan Borahan</h2>
-            <h3>Co-Secretary</h3>
-            <p class="lead"><a href="mailto:secretary@mutts.org.uk">secretary@mutts.org.uk</a></p>
-            <p>Nisan is a third year Cognitive Neuroscience and Psychology student who joined MUTTS last year. As Secretary, she has responsibilities such as taking minutes during meetings, maintaining the crew rota, and organizing the paperwork. This year, she aims to increase membership and broaden the range of services provided by MUTTS. In her free time, she enjoys reading and attempting to draw.</p>
         </div>
     </div>
     <div class="row mb-5">
