--- a/templates/committee.html.twig
+++ b/templates/committee.html.twig
@@ -1,3 +1,4 @@
+<!-- need to change descriptions -->
 {% extends 'base.html.twig' %}
 
 {% set title = "Committee" %}
@@ -13,15 +14,15 @@
     <div class="row mb-5">
         <div class="col-md-1"></div>
         <div class="col-md-5 bio">
-            <img class="rounded-circle" src="img/committee/louis.jpg" alt="Chair">
-            <h2>Louis Icke</h2>
+            <img class="rounded-circle" src="img/committee/jay_fixed.jpg" alt="Chair">
+            <h2>Jay Brown</h2>
             <h3>Chair</h3>
             <p class="lead"><a href="mailto:chair@mutts.org.uk">chair@mutts.org.uk</a></p>
             <p>Louis is a third year Aerospace Engineering student. As Chair he is responsible for chairing committee meetings, taking overall responsibility for the society and its activities and working with other committee members on tasks such as organising training and ensuring the adequate staffing of events. This year he aims to increase the number of external venues MUTTS works in, and collaborate with even more socities and student groups.</p>
         </div>
         <div class="col-md-5 bio">
-            <img class="rounded-circle" src="img/committee/samtw.jpg" alt="Hire Manager">
-            <h2>Sam Talbot-Williams</h2>
+            <img class="rounded-circle" src="img/committee/george_fixed.jpg" alt="Hire Manager">
+            <h2>George Wilson</h2>
             <h3>Hire Manager</h3>
             <p class="lead"><a href="mailto:hire@mutts.org.uk">hire@mutts.org.uk</a></p>
             <p>Sam is in his second year of MUTTS, having joined the society last year. As hire manager, it is his job to oversee all hires, making sure the project managers feel supported in their role. He also manages MUTTS' equipment, making sure that we can meet the highest standards.</p>
@@ -30,7 +31,7 @@
     <div class="row mb-5">
         <div class="col-md-1"></div>
         <div class="col-md-5 bio">
-            <img class="rounded-circle" src="img/committee/samj.jpg" alt="Treasurer">
+            <img class="rounded-circle" src="img/committee/sam_fixed.jpg" alt="Treasurer">
             <h2>Sam Jackson</h2>
             <h3>Treasurer</h3>
             <p class="lead"><a href="mailto:treasurer@mutts.org.uk">treasurer@mutts.org.uk</a></p>
@@ -38,8 +39,8 @@
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-5 bio">
-            <img class="rounded-circle" src="img/committee/james.jpg" alt="Secretary">
-            <h2>James Button</h2>
+            <img class="rounded-circle" src="img/committee/will_fixed.jpg" alt="Secretary">
+            <h2>Will Clark-Steel</h2>
             <h3>Secretary</h3>
             <p class="lead"><a href="mailto:secretary@mutts.org.uk">secretary@mutts.org.uk</a></p>
             <p>James is a third year Pharmacy student and it is his second year in MUTTS. As Secretary, he is responsible for maintaining the crew and show operator rota for hires as well as general organisation.</p>
@@ -48,16 +49,16 @@
     <div class="row mb-5">
         <div class="col-md-1"></div>
         <div class="col-md-5 bio">
-            <img class="rounded-circle" src="img/committee/charlie.jpg" alt="social sec">
-            <h2>Charlie Roberts</h2>
+            <img class="rounded-circle" src="img/committee/alf_fixed.jpg" alt="social sec">
+            <h2>Alf Koplick</h2>
             <h3>Social Secretary &amp; Inclusion Officer</h3>
             <p class="lead"><a href="mailto:social@mutts.org.uk">social@mutts.org.uk</a></p>
             <p>Charlie is a second year Biology student. As social sec they are responsible for organising and promoting events as well as overseeing the society's social media platforms. As Inclusion Officer they oversee the wellbeing of all society members.</p>
         </div>
         <div class="col-md-5 bio">
-            <img class="rounded-circle" src="img/committee/david.jpg" alt="MMU Representative">
-            <h2>David Ferro</h2>
-            <h3>MMU Representative</h3>
+            <img class="rounded-circle" src="img/committee/arjun_fixed.jpg" alt="Crew Lead">
+            <h2>Arjun Patel</h2>
+            <h3>Crew Lead</h3>
             <p class="lead"><a href="mailto:mmurep@mutts.org.uk">mmurep@mutts.org.uk</a></p>
             <p>David is a third year Software Engineering student who joined MUTTS last year. As MMU Representative he is responsible for organising and promoting MUTTS in MMU. This year he hopes to expand mutts into MMU and operate a few shows. In his free time he enjoys playing rugby.</p>
         </div>
